--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
             font-weight: bold;
             color: #2e7d32;
         }
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2145053445415805"
+     crossorigin="anonymous"></script>
     </style>
 </head>
 <body>
