--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
             font-weight: bold;
             color: #2e7d32;
         }
+        <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+        </script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2145053445415805"
      crossorigin="anonymous"></script>
     </style>
@@ -213,5 +216,8 @@
             }
         }
     </script>
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-2145053445415805">
+</amp-auto-ads>
 </body>
 </html>
