--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://script.adquake.com/js/adquake.js" adquake-key="sCFN7ywxw0amghmKboe/lQ=="></script>
+    <script type="text/javascript">(function(a,b,c,d,e,f,g){a[c]=a[c]||function(){(a[c].q=a[c].q||[]).push(arguments)};f=b.createElement(d);f.async=1;f.setAttribute("adquake-key",e);f.src="https://script.adquake.com/js/adquake.js";g=b.getElementsByTagName(d)[0];g.parentNode.insertBefore(f,g);})(window,document,"adquake","script","sCFN7ywxw0amghmKboe/lQ==");</script>
     <meta name="google-adsense-account" content="ca-pub-2145053445415805">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2145053445415805"
      crossorigin="anonymous"></script>
