--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="description" content="Run a free internet speed test to check your network performance. Our broadband speed test accurately measures your download speed, upload speed, ping, jitter, and packet loss. Optimize your internet connection for gaming, streaming, video conferencing, and more.  Diagnose slow internet, compare providers, and verify your ISP speeds.  Easy to use on any device, with results in seconds.  Start your speed test now and understand your internet performance!" />
-    <meta name="keywords" content="internet speed test, speed test, network speed test, broadband speed test, ping test, download speed test, upload speed test, online speed test, free speed test, internet performance test" />
+    <meta name="keywords" content="electromart, electromarts,speed,net, internet speed test, speed test, network speed test, broadband speed test, ping test, download speed test, upload speed test, online speed test, free speed test, internet performance test" />
     <script async src="https://script.adquake.com/js/adquake.js" adquake-key="sCFN7ywxw0amghmKboe/lQ=="></script>
     <script type="text/javascript">(function(a,b,c,d,e,f,g){a[c]=a[c]||function(){(a[c].q=a[c].q||[]).push(arguments)};f=b.createElement(d);f.async=1;f.setAttribute("adquake-key",e);f.src="https://script.adquake.com/js/adquake.js";g=b.getElementsByTagName(d)[0];g.parentNode.insertBefore(f,g);})(window,document,"adquake","script","sCFN7ywxw0amghmKboe/lQ==");</script>
     <meta name="google-adsense-account" content="ca-pub-2145053445415805">
